--- a/src/components/broker/PagesBroker.astro
+++ b/src/components/broker/PagesBroker.astro
@@ -1,8 +1,8 @@
 <section id="pages">
     <article class="page">
-        <div class="canvas-container">
+        <figure class="canvas-container">
             <canvas></canvas>
-        </div>
+        </figure>
     </article>
 </section>
 
@@ -14,7 +14,7 @@
             width: 100%;
         }
 
-        div.canvas-container {
+        figure.canvas-container {
             height: 77dvh;
             width: 95%;
             margin: 0 auto;
