--- a/src/components/menu_toggle/HamburgerMenu.astro
+++ b/src/components/menu_toggle/HamburgerMenu.astro
@@ -68,7 +68,7 @@
         }
     }
 </style>
-<script>
+<script is:inline>
     const screenWidth = window.innerWidth;
     const $hamburger = document.getElementById("hamburger");
 
