--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     --bg-color-dark: #121212;
     --bg-color-light: #dfdfdf;
     --text-color-dark: #fefefe;
@@ -13,7 +13,7 @@
     --green-700: #0f8b00;
     --green-800: #116d07;
     --green-950: #023400;
-    --green:#1b8800;
+    --green: #1b8800;
 
     --red-50: #FFEEF1;
     --red-100: #FFDAE1;
@@ -27,12 +27,30 @@
     --red-950: #560011;
     --red: #88001b;
 }
-h1,h2,h3,h4,h5,ul,body,main,div,input,label,form,nav,header,p
-,button,aside{
+
+h1,
+h2,
+h3,
+h4,
+h5,
+ul,
+body,
+main,
+div,
+input,
+label,
+form,
+nav,
+header,
+p,
+button,
+aside,
+section {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
 
     font-family: 'Russo One', sans-serif;
@@ -44,21 +62,23 @@ body {
     width: 100%;
     max-width: 1350px;
     min-width: 290px;
-    
+
     margin-top: 55px;
     background-color: var(--bg-color-dark);
     color: var(--text-color-dark);
 
     /* Si el body no está en los form */
-    &:has(#menu-toggle){
+    &:has(#menu-toggle) {
         min-height: auto;
     }
 }
+
 h1 {
     font-weight: 100;
     letter-spacing: 5px;
     color: inherit;
 }
+
 main {
     display: flex;
     flex-direction: column;
@@ -66,6 +86,7 @@ main {
     justify-content: center;
     height: auto;
 }
+
 /* Theme mode styles */
 html.light {
     body {
