--- a/src/components/TitlesWelcome.astro
+++ b/src/components/TitlesWelcome.astro
@@ -13,7 +13,7 @@ else if (timeNow >= hourAfternoon && timeNow < hourNight)
 else text = "Buenas noches";
 ---
 
-<h5>{text}</h5>
+<h5 id="title">{text}, </h5>
 <style>
     h5 {
         width: 100%;
