--- a/src/components/account/DataAccount.astro
+++ b/src/components/account/DataAccount.astro
@@ -96,7 +96,7 @@ import ContainerLoaderIcon from "@components/loader/ContainerLoaderIcon.astro";
                 }
             }
 
-            getDataSessionStorage("dataUser").then((data) =>
+            getDataSessionStorage("data-user").then((data) =>
                 renderDataAccount(data),
             );
         }
