--- a/src/pages/inicio.astro
+++ b/src/pages/inicio.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 import MenuToggle from "@components/menu_toggle/MenuToggle.astro";
-import DataHome from "@components/DataHome.astro";
+import DataHome from "@components/home/DataHome.astro";
 
 import "@styles/main-content.css";
 
