--- a/src/components/fund/FundData.astro
+++ b/src/components/fund/FundData.astro
@@ -34,6 +34,7 @@ import TitlesFundData from "@components/fund/TitlesFundData.astro";
 
     figure#canvas-container {
       height: 77dvh;
+      margin: 0; 
     }
     section#stats {
       height: 95dvh;
