--- a/src/pages/cuenta.astro
+++ b/src/pages/cuenta.astro
@@ -19,6 +19,7 @@ if (!Astro.cookies.get("jwt")) {
 </Layout>
 <style>
     h1 {
-        margin: 1.5rem;
+        font-size: 2.5rem;
+        margin: 3.5rem 0;
     }
 </style>
