--- a/src/components/BackgroundColors.astro
+++ b/src/components/BackgroundColors.astro
@@ -65,7 +65,7 @@ const { type } = Astro.props;
             padding: 3px;
         }
         &.data-account{
-            margin: auto;
+            width: 100%;
         }
         
         &.table-fund{
