--- a/src/components/account/DataAccount.astro
+++ b/src/components/account/DataAccount.astro
@@ -7,16 +7,13 @@ import ContainerLoaderIcon from "@components/loader/ContainerLoaderIcon.astro";
 <data-account>
     <ContainerLoaderIcon />
     <BackgroundColors type="data-account">
-        <ul>
-            <li>
-                <h3>Perfil</h3>
-                <CardDataAccount key="Usuario" />
-                <CardDataAccount key="Nombre" />
-                <CardDataAccount key="Apellidos" />
-                <CardDataAccount key="Correo" />
-                <CardDataAccount key="Contraseña" />
-            </li>
-        </ul>
+        <article>
+            <CardDataAccount key="Usuario" />
+            <CardDataAccount key="Nombre" />
+            <CardDataAccount key="Apellidos" />
+            <CardDataAccount key="Correo" />
+            <CardDataAccount key="Contraseña" />
+        </article>
     </BackgroundColors>
 </data-account>
 
@@ -25,18 +22,18 @@ import ContainerLoaderIcon from "@components/loader/ContainerLoaderIcon.astro";
         width: 100%;
         height: 100%;
     }
-    ul {
+    article {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        justify-content: start;
         position: relative;
 
         width: 100%;
-        height: 100%;
+        height: 70dvh;
 
-        gap: 1.5rem;
+        gap: 1.2rem;
         margin: auto;
-        padding: 10px;
+        padding: 2rem 1rem;
         border-radius: 8px;
         z-index: 60;
 
@@ -44,28 +41,6 @@ import ContainerLoaderIcon from "@components/loader/ContainerLoaderIcon.astro";
 
         html.light & {
             background-color: var(--bg-color-light);
-        }
-
-        li {
-            list-style: none;
-
-            h3 {
-                font-weight: 100;
-                letter-spacing: 1px;
-
-                body.red & {
-                    color: var(--red-600);
-                }
-                body.green & {
-                    color: var(--green-600);
-                }
-                html.light > body.red & {
-                    color: var(--red);
-                }
-                html.light > body.green & {
-                    color: var(--green);
-                }
-            }
         }
     }
 </style>
